Look at that jacoco gets 100% code coverage.